[tool.poetry]
name = "machine-learning-pacman-classifier-coursework"
version = "0.1.0"
description = "Machine Learning Pacman Classifier Coursework "
authors = ["Maruf Bepary <bepary71@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.1.1"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
